[CVNG-658]: End to End integration for Splunk connector (#16108)
* [CVNG-658]: Adding test connection validator for Splunk Connector

* [CVNG-658]: End to End implementation for Splunk connector

* [CVNG-658]: Fixing unit teests and resolving PR check issues

* [CVNG-658]: Fixing Splunk Service initialization with Basic Auth